--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "MD5": "^1.3.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "jade": "~1.11.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.6",
