--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^4.9.6",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.2"
   }
 }
